--- a/index.css
+++ b/index.css
@@ -1,26 +1,22 @@
+/*HEADER STYLES*/
 .header {
     background-color: rgba(5, 5, 122, 0.877);
     margin: -10px;
     height: 100px;
 }
-
 .header-nav {
     float: right;
     padding: 25px 0
 }
-
 .header-nav a {
     color: white;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
 }
-
 .header-nav>li {
-    display: inline-block;
-    
+    display: inline-block;   
 }
-
 .header-nav ul {
     list-style: none;
 }
@@ -47,4 +43,105 @@ height: 6px;
 background-color: red;
 border-radius: 50%;
 margin-left: 5px; 
+}
+/*CONTENT STYLES*/
+.bar {
+    background: rgba(5, 5, 122, 0.877);
+    height: 150px;
+    margin: 500px -10px;
+    width: 100vw
+}
+div.trending{
+    margin: -1px -10px;
+    padding: 0;
+    position: sticky;
+    top: 0;
+}
+.labels-container{
+    padding: 0 10vw;
+}
+.labels{
+    padding: 0;
+    margin: 8px 0;
+    border-bottom: 1px solid rgb(100, 100, 238);
+}
+.labels .trending-videos{
+    float: right;
+    color: rgba(56, 56, 179, 0.877);
+}
+.labels div{
+    display: inline-block;
+}
+.labels h2 {
+    line-height: 5px;
+}
+.dont-miss{
+    margin: 4px 6px -7.5px 0;
+    background-color: rgba(5, 5, 122, 0.877);
+    color: rgba(245, 239, 239, 0.8);
+    padding: 0 50px 0 5px
+}
+/*FOOTER STYLES*/
+.footer{
+    width: 100vw;
+    background: rgba(5, 5, 122, 0.877);
+    margin: -10px;
+    bottom: 0px;
+}
+.footer-content {
+    padding: 0 10vw;
+}
+.footer-top{
+    border-bottom: solid 1px rgba(245, 239, 239, 0.2);
+    padding: 0 0 5px
+}
+.footer img {
+    height: 5vh;
+    margin: 15px 15px 0;
+    border-radius: 10%;
+}
+.footer p{
+    color: rgba(245, 239, 239, 0.5);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    text-align: center;
+    padding:0 0 20px 0 
+}
+.social-links{
+    float: right;
+}
+.social-links>li{
+    display: inline-block;
+}
+.social-links a{
+    color: rgba(245, 239, 239, 0.8);
+    font-size: 1.5em;
+}
+.social-links>li~li{
+    margin-left: 5px;
+}
+.other-links{
+    position: relative;
+    margin: 0;
+    padding: 15px 0 40px;
+    width: 100%
+}
+.other-links ul{
+    display: inline-block;
+    list-style: none;
+    margin: 0 13% 0 1%;
+    padding: 0;
+    line-height: 30px;
+}
+.other-links a{
+    color: rgba(245, 239, 239, 0.8);
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+}
+.other-links li:first-child{
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: rgb(100, 100, 238)
 }
