--- a/index.css
+++ b/index.css
@@ -1,6 +1,13 @@
+/*VARIABLES*/
+:root {
+    --bar-color: rgba(5, 5, 122, 0.877);
+    --border: 1px solid rgba(150, 142, 142,0.3);
+    --page-text-color: rgb(90, 90, 90);
+    --hover-text-color: rgb(100, 100, 238);
+}
 /*HEADER STYLES*/
 .header {
-    background-color: rgba(5, 5, 122, 0.877);
+    background-color: var(--bar-color);
     margin: -10px;
     height: 100px;
 }
@@ -46,9 +53,9 @@ margin-left: 5px;
 }
 /*CONTENT STYLES*/
 .bar {
-    background: rgba(5, 5, 122, 0.877);
+    background: var(--bar-color);
     height: 150px;
-    margin: 500px -10px;
+    margin: 400px -10px;
     width: 100vw
 }
 div.trending{
@@ -67,7 +74,7 @@ div.trending{
 }
 .labels .trending-videos{
     float: right;
-    color: rgba(56, 56, 179, 0.877);
+    color: var(--hover-text-color);
 }
 .labels div{
     display: inline-block;
@@ -76,15 +83,123 @@ div.trending{
     line-height: 5px;
 }
 .dont-miss{
-    margin: 4px 6px -7.5px 0;
-    background-color: rgba(5, 5, 122, 0.877);
+    margin: 4px 6px -7.9px 0;
+    background-color: var(--bar-color);
     color: rgba(245, 239, 239, 0.8);
     padding: 0 50px 0 5px
+}
+.stories{
+    padding: 0 10vw;
+}
+.story-headers{
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+    padding: 0
+}
+.story-headers>li{
+    flex: 2;
+    margin-right: -5px;
+}
+.story-headers>li~li{
+    flex: 1;
+    padding-left: 2%;
+}
+.story-headers li{
+    text-align: left;
+    line-height: 60px;
+    font-size: 25px;
+    font-weight: bold;
+    color: var(--page-text-color)
+}
+.story-headers div{
+    border-bottom: 1px solid rgba(150, 142, 142,0.3);
+}
+.more-stories{
+    display: flex;
+    height: 86vh;
+    margin-bottom: 20vh;
+}
+.more-stories-one{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+.more-stories-two{
+    flex: 1;
+    padding: 0 13px;
+}
+.latest-stories{
+    flex: 1;
+    overflow: scroll;
+    border-left: var(--border);
+    padding: 0 8px;
+    height: 100%;
+    overflow-x: hidden;
+}
+.more-stories-one img{
+    height: 200px;
+}
+.more-stories-two img{
+    height: 80px;
+    border-radius: 3px;
+    margin-right: 10px;
+}
+.more-stories-two>div:first-child h3{
+    margin-top: -2px;
+}
+.latest-stories img{
+    height: 80px;
+    border-radius: 3px;
+}
+.latest-stories>div:first-child h3{
+    margin-top: -2px;
+}
+.latest-stories>div~div img,
+.more-stories-two>div~div img{
+    margin-top: 15px;
+}
+.more-stories-two>div{
+    display: flex;
+}
+.more-stories-two>div~div,
+.latest-stories>div~div{
+    border-top: var(--border);
+}
+.latest-stories>div{
+    display: flex;
+    justify-content: end;
+}
+.latest-stories p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+}
+.latest-stories p::before{
+    content: "";
+display: inline-block;
+width: 7px;
+height: 7px;
+background-color: rgb(202, 13, 13);
+margin: 0 5px 0.5px 0; 
+}
+.more-stories a{
+    text-decoration: none;
+    line-height: 19px;
+    padding: 1px 0;
+}
+.more-stories a, 
+.more-stories h3,
+.more-stories p{
+    color: var(--page-text-color);
+}
+.more-stories a:hover,
+.more-stories h3:hover{
+    color: var(--hover-text-color);
 }
 /*FOOTER STYLES*/
 .footer{
     width: 100vw;
-    background: rgba(5, 5, 122, 0.877);
+    background: var(--bar-color);
     margin: -10px;
     bottom: 0px;
 }
@@ -105,7 +220,7 @@ div.trending{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
     text-align: center;
-    padding:0 0 20px 0 
+    padding:0 0 20px 0;
 }
 .social-links{
     float: right;
@@ -143,8 +258,8 @@ div.trending{
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
-    color: rgb(100, 100, 238)
+    color: var(--hover-text-color);
 }
 .footer-links li~li a:active, .footer-links li~li a:hover{
-    color: rgb(100, 100, 238);
+    color: var(--hover-text-color);
 }
